[package]
name = "files_processing"
version = "0.1.0"
authors = ["GBernardo10 <g_bernardo10@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
calamine = "0.17.0"
chrono = "0.4.19"
serde = {version = "1.0.104", features = ["derive"]}
ooxml = "0.2.1"
